# adaptive-rag-project

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Architecture.md  Dockerfile  MCP_MIGRATION_GUIDE.md  Makefile  PHASE_1.8_IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  REFACTORING_PLAN.md  REFACTOR_PROGRESS.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  setup.sh  verify.sh
.github/workflows/: ci-cd.yml  ci.yml
docs/: MCP_INTEGRATION_GUIDE.md
mcp/: analytics_server.py  filesystem_server.py  memory_server.py  rag_integration.py  sql_server.py
src/: adaptive_rag.py  advanced_grounding.py  agent_registry.py  chunking.py  config.py  context_manager.py  coordinator_agent.py  core_rag_engine.py  crag.py  hybrid_search.py  loop.py  main_app.py  main_app_mcp_enhanced.py  researcher_agent.py  scraper.py  stock.py  stock_previous.py
src/adaptive_rag_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/agents/: base_agent.py
src/rag/: __init__.py  answer_generator.py  cache_manager.py  cache_orchestrator.py  chain_factory.py  document_grader.py  document_manager.py  embedding_factory.py  error_handler.py  llm_factory.py  models.py  query_processor.py  text_splitter_factory.py  vector_store_manager.py  workflow_orchestrator.py
tests/: conftest.py  test_agent_loop.py  test_answer_generator.py  test_cache_orchestrator.py  test_config.py  test_context_manager.py  test_core_rag_engine.py  test_document_grader.py  test_document_manager.py  test_query_processor.py  test_scraper_feed.py  test_sql_injection.py  test_sql_security.py  test_stock_feed.py  test_vector_store_manager.py  test_workflow_orchestrator.py
