[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "adaptive_rag_project"
version         = "0.2.0"
description     = "Adaptive RAG with Llama-3 and integrated workflows."
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "MIT"}
authors         = [{ name = "Onur Ünal", email = "upklw@student.kit.edu" }]

dependencies = [
    "beautifulsoup4",
    "chromadb",
    "gpt4all",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-experimental",
    "langchain-google-genai",
    "langchain-openai",
    "langchainhub",
    "langgraph",
    "pydantic",
    "pydantic-settings",
    "pypdf",
    "python-dotenv",
    "streamlit",
    "tavily-python",
    "tiktoken"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "mypy",
  "black"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
