[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "adaptive_rag_project"
version         = "0.2.0"
description     = "Adaptive RAG with Llama-3 and integrated workflows."
readme          = "README.md"
requires-python = ">=3.9"
license         = {text = "MIT"}
authors         = [{ name = "Onur Ünal", email = "upklw@student.kit.edu" }]

dependencies = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "chromadb>=0.4.0,<0.5.0",
    "gpt4all>=2.0.0,<3.0.0",
    "langchain>=0.2.0,<0.3.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-core>=0.2.0,<0.3.0",
    "langchain-experimental>=0.0.50,<0.1.0",
    "langchain-google-genai>=1.0.0,<2.0.0",
    "langchain-openai>=0.1.0,<0.2.0",
    "langchainhub>=0.1.0,<0.2.0",
    "langchain-mcp-adapters>=0.1.8",
    "mcp>=1.6.0",
    "langgraph>=0.2.0,<0.3.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "pypdf>=4.0.0,<5.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "streamlit>=1.35.0,<2.0.0",
    "tavily-python>=0.3.0,<0.4.0",
    "langchain-tavily>=0.1.0,<0.2.0",
    "tiktoken>=0.7.0,<0.8.0",
    "rank-bm25>=0.2.0,<0.3.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "watchdog>=4.0.0,<5.0.0",
    "pytesseract>=0.3.10,<0.4.0",
    "spacy>=3.7.0,<4.0.0",
    "neo4j>=5.15.0,<6.0.0",
    "pillow>=10.0.0,<11.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-mock",
  "ruff",
  "mypy",
  "black"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]
