[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive_rag_project"
version = "0.2.0"
description = "Adaptive RAG with Llama-3 and integrated workflows."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [{ name = "Onur Ünal", email = "upklw@student.kit.edu" }]

dependencies = [
    # Core LangChain Stack - Updated to support 1.x versions
    "langchain>=0.2.0,<2.0.0",
    "langchain-community>=0.2.0,<2.0.0",
    "langchain-core>=0.2.0,<2.0.0",
    "langchain-openai>=0.1.0,<2.0.0",
    "langchain-google-genai>=1.0.0,<3.0.0",
    "langgraph>=0.2.0,<2.0.0",
    "langchain-experimental>=0.0.50,<2.0.0",
    
    # LLM Providers
    "openai>=1.0.0,<2.0.0",
    
    # Vector Store & Embeddings
    "chromadb>=0.4.22,<0.7.0",
    
    # Configuration
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    
    # Document Processing
    "pypdf>=4.0.0,<5.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "tiktoken>=0.5.0,<1.0.0",
    
    # Web Framework
    "streamlit>=1.35.0,<3.0.0",
    
    # Search & Retrieval
    "tavily-python>=0.3.0,<0.4.0",
    "rank-bm25>=0.2.0,<0.3.0",
    
    # Utilities
    "requests>=2.31.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "black>=23.0.0,<25.0.0",
    "flake8>=6.1.0,<8.0.0",
    "mypy>=1.5.0,<2.0.0",
    "pytest-cov>=4.1.0,<6.0.0",
]

# MCP support - requires Python 3.10+
mcp = [
    "mcp>=1.0.0,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 127
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 127
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]